--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\student\\.netbeans\\7.1.2\\build.properties
+user.properties.file=E:\\Documents and Settings\\Buddhika\\.netbeans\\7.1.1\\build.properties
